test(viemodel): add test for paging viewmodel